# ratchetlab

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  program.md  pyproject.toml  ratchet.py  ratchet.toml
.github/workflows/: ci.yml
docs/: cookbook.md  release-checklist.md
examples/codeperf/: agent_stub.py  eval.py  program.md  ratchet.toml  sample_run.txt  target.py
examples/promptopt/: README.md  dev_set.jsonl  eval.py  holdout_set.jsonl  program.md  ratchet.toml  system_prompt.md
tests/: test_ratchet.py
