[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ratchetlab"
version = "0.1.0"
description = "A tiny eval-locked improvement loop for agents, prompts, code, and workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Russ Wonsley" }
]
keywords = ["agents", "evals", "automation", "prompt-optimization", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/stoicpickle/ratchetlab"
Issues = "https://github.com/stoicpickle/ratchetlab/issues"

[project.scripts]
ratchet = "ratchet:main"

[tool.setuptools]
py-modules = ["ratchet"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
